# django-admin-column-totals

./: MANIFEST.in  README.md  setup.cfg
admin_column_totals/: admin.py
admin_column_totals/templates/admin_column_totals/: change_list_results_totals.html  change_list_totals.html
admin_column_totals/templatetags/: admin_column_totals.py
