[metadata]
name = django-admin-column-totals
version = 0.1
author = Legend King
description = Django admin column totals
long_description = file:README.metadata
url = https://github.com/legend-king/django-admin-column-totals
license = MIT
keywords = django
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: